--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 body {
   margin: 0px;
-  background: linear-gradient(180deg, #204c84 1%, #162544 10%, #14203d 20%);
+  background: linear-gradient(180deg, #1b4376 1%, #162544 35%, #14203d 50%);
   min-height: 100vh;
 }
 
@@ -119,13 +119,14 @@ header.floating {
   justify-content: space-around;
   position: relative;
   min-width: 100%;
-  padding: 64px;
+  padding: 64px 32px;
   border-radius: 14px;
   background: rgba(200, 200, 200, 0.08);
 }
 
 .current-weather-card {
   margin-bottom: 32px;
+  height: 380px;
 }
 .current-weather-label,
 .hourly-weather-label {
@@ -198,7 +199,7 @@ header.floating {
   align-items: center;
   justify-content: center;
   color: #fff;
-  opacity: 0.7;
+  opacity: 0.5;
   transition: opacity 0.2s ease;
 }
 .nav-arrow.interactable {
@@ -230,16 +231,20 @@ header.floating {
 }
 .nav-arrow.interactable:hover,
 .scroll-bar.interactable:hover {
-  opacity: 0.8;
+  opacity: 0.75;
 }
 .days-nav {
   display: flex;
   position: relative;
   align-items: center;
-  width: 100%;
+  justify-content: center;
   gap: 16px;
 }
 .days-nav-days {
+  width: 1168px;
+}
+.days-nav-days,
+.hours-nav-hours {
   overflow: hidden;
   display: flex;
   gap: 8px;
@@ -258,16 +263,17 @@ header.floating {
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(6, 1fr);
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   padding: 16px;
-  flex: 0 0 calc((100% - 6 * 8px) / 7);
+  min-width: 160px;
+  min-height: 160px;
   aspect-ratio: 1/1;
   border-radius: 28px;
   background: #162544;
   font-size: 14px;
 }
 .days-nav-day.selected {
-  background: #333d56;
+  background: rgba(255, 255, 255, 0.1);
   border-radius: 28px 28px 0px 0px;
 }
 .days-nav-day.selected .days-nav-connector {
@@ -279,9 +285,9 @@ header.floating {
   position: absolute;
   z-index: 200;
   width: 100%;
-  height: 10px;
-  bottom: -10px;
-  background: #333d56;
+  height: 8px;
+  bottom: -8px;
+  background: rgba(255, 255, 255, 0.1);
 }
 .days-nav-connector::before {
   content: "";
@@ -289,10 +295,10 @@ header.floating {
   position: absolute;
   width: 64px;
   height: 64px;
-  border-radius: 50%;
-  left: -63px;
-  bottom: -1px;
-  box-shadow: 0 0 0 16px #333d56;
+  border-radius: 36px;
+  left: -64px;
+  bottom: 0px;
+  box-shadow: 0 0 0 16px rgba(255, 255, 255, 0.1);
   clip-path: inset(50% 0px 0px 50%);
 }
 .days-nav-connector::after {
@@ -301,10 +307,10 @@ header.floating {
   position: absolute;
   width: 64px;
   height: 64px;
-  border-radius: 50%;
-  right: -63px;
-  bottom: -1px;
-  box-shadow: 0 0 0 16px #333d56;
+  border-radius: 36px;
+  right: -64px;
+  bottom: 0px;
+  box-shadow: 0 0 0 16px rgba(255, 255, 255, 0.1);
   clip-path: inset(50% 50% 0px 0px);
 }
 .days-nav-day.at-left-edge .days-nav-connector::before,
@@ -345,14 +351,20 @@ header.floating {
   border-radius: 50%;
   padding: 5px;
 }
-.max-temp-text {
+.max-temp-value {
   margin-top: 4px;
   font-size: 26px;
 }
-.min-temp-text {
+.min-temp-value {
   margin-top: 4px;
   font-size: 20px;
   color: #bebebe;
+}
+.max-temp-icon {
+  color: #fa870b;
+}
+.min-temp-icon {
+  color: #35467f;
 }
 .hours-nav {
   overflow: hidden;
@@ -360,11 +372,11 @@ header.floating {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  gap: 16px;
-  width: calc(100% - 96px);
+  width: 1168px;
   padding-bottom: 16px;
   border-radius: 28px;
-  background: #333d56;
+  background: rgba(255, 255, 255, 0.1);
+  transition: border-radius 0.055s ease;
 }
 .days-nav:has(.days-nav-day.at-left-edge) + .hours-nav {
   border-top-left-radius: 0px;
@@ -383,32 +395,28 @@ header.floating {
   left: 0px;
   background-image: radial-gradient(
     ellipse farthest-corner at left center,
-    rgba(22, 37, 68, 2),
-    rgba(22, 37, 68, 1.6) 30%,
+    rgba(22, 37, 68, 1.6),
+    rgba(22, 37, 68, 1.4) 30%,
     rgba(22, 37, 68, 1.2) 40%,
-    rgba(22, 37, 68, 1) 50%,
-    rgba(22, 37, 68, 0.5) 60%,
-    rgba(22, 37, 68, 0) 70%
+    rgba(22, 37, 68, 0.8) 50%,
+    rgba(22, 37, 68, 0.4) 65%,
+    rgba(22, 37, 68, 0) 73%
   );
 }
 .hours-nav .nav-arrow-forward {
   right: 0px;
   background-image: radial-gradient(
     ellipse farthest-corner at right center,
-    rgba(22, 37, 68, 2),
-    rgba(22, 37, 68, 1.6) 30%,
+    rgba(22, 37, 68, 1.6),
+    rgba(22, 37, 68, 1.4) 30%,
     rgba(22, 37, 68, 1.2) 40%,
-    rgba(22, 37, 68, 1) 50%,
-    rgba(22, 37, 68, 0.5) 60%,
-    rgba(22, 37, 68, 0) 70%
+    rgba(22, 37, 68, 0.8) 50%,
+    rgba(22, 37, 68, 0.4) 65%,
+    rgba(22, 37, 68, 0) 73%
   );
 }
 .hours-nav-hours {
-  overflow-x: hidden;
-  display: flex;
-  gap: 8px;
-  padding: 16px;
-  width: 100%;
+  padding: 16px 8px;
 }
 .hours-nav-hour {
   position: relative;
@@ -417,10 +425,14 @@ header.floating {
   align-items: center;
   gap: 16px;
   padding: 16px;
-  flex: 0 0 calc((100% - 7 * 8px) / 8);
+  min-width: calc((100% - 5 * 8px) / 6);
   border-radius: 25px;
   background: #162544;
   font-size: 16px;
+}
+.hours-nav-hour.current {
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  outline: 1px solid rgba(255, 255, 255, 0.3);
 }
 .hour-text {
   padding-bottom: 8px;
@@ -430,6 +442,7 @@ header.floating {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  width: 100%;
 }
 .hour-weather-temp,
 .hour-weather-apparent-temp {
@@ -462,14 +475,25 @@ header.floating {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, auto);
-  column-gap: 4px;
-  row-gap: 12px;
+  justify-content: center;
+  row-gap: 10px;
 }
 .hour-weather-detail {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 8px;
   font-size: 14px;
   text-align: center;
+}
+.hour-weather-detail-icon {
+  margin-bottom: 8px;
+  color: #6983bf;
+}
+.hour-weather-detail-text {
+  display: flex;
+  gap: 4px;
+  margin-bottom: 4px;
+}
+.hour-weather-wind-direction {
+  margin-left: 2px;
 }
