--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 :root {
   font-family: Inter, "Segoe UI", sans-serif;
   color: #fff;
-  --header-bg-color: #dbdbdb;
 }
 * {
   box-sizing: border-box;
@@ -18,6 +17,9 @@ body {
 svg {
   display: block;
 }
+.hidden {
+  opacity: 0;
+}
 
 header {
   position: sticky;
@@ -29,14 +31,14 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.55);
   -webkit-backdrop-filter: blur(12px);
   backdrop-filter: blur(12px);
   transition: top 0.225s ease, background 0.325s linear;
 }
 header.floating {
   top: 0px;
-  background: rgba(0, 0, 0, 0.36);
+  background: rgba(0, 0, 0, 0.45);
 }
 .logo-container {
   display: flex;
@@ -68,12 +70,16 @@ header.floating {
   flex-basis: 40%;
 }
 .search-bar {
+  position: relative;
   display: flex;
   align-items: center;
   border-radius: 8px;
   padding: 5px 10px;
-  height: 45px;
   background: rgba(255, 255, 255, 0.08);
+  transition: border-radius 0.25s linear;
+}
+.search-bar:has(.search-results.expanded) {
+  border-radius: 8px 8px 0px 0px;
 }
 .search-separator {
   -webkit-user-select: none;
@@ -94,19 +100,50 @@ header.floating {
 }
 .search-label {
   display: inline-block;
-  opacity: 0;
   overflow: hidden;
   white-space: nowrap;
   font-weight: 500;
   max-width: 0px;
   margin-left: 0px;
-  transition: opacity 0.275s ease, max-width 0.275s ease, margin 0.275s ease;
+  transition: max-width 0.25s ease, margin 0.25s ease;
 }
 .search-label:has(~ .search-input:focus),
 .search-label:has(~ .search-input:active) {
-  opacity: 1;
   max-width: 150px;
   margin-left: 8px;
+}
+.search-results {
+  overflow: hidden;
+  position: absolute;
+  top: 53px;
+  left: 0px;
+  width: 100%;
+  margin: 0px;
+  padding: 0px;
+  border-radius: 0px 0px 8px 8px;
+  background: rgba(0, 0, 0, 0.55);
+  transition: background 0.325s linear;
+}
+header.floating .search-results {
+  background: rgba(0, 0, 0, 0.45);
+}
+.search-result {
+  cursor: pointer;
+  -webkit-user-select: none;
+  user-select: none;
+  list-style: none;
+  padding: 10px;
+  transition: background 0.2s cubic-bezier(0.1, 0.1, 0.2, 1);
+}
+.search-result:hover {
+  background: rgba(0, 0, 0, 0.1);
+}
+.search-result-line-1 {
+  margin-bottom: 2px;
+  font-size: 18px;
+}
+.search-result-line-2 {
+  color: #dbdbdb;
 }
 
 .content {
@@ -245,7 +282,6 @@ header.floating {
 .scroll-bar.hidden {
   pointer-events: none;
   cursor: auto;
-  opacity: 0;
 }
 .nav-arrow.interactable:hover,
 .scroll-bar.interactable:hover {
