improve handling location permission

--- a/style.css
+++ b/style.css
@@ -155,6 +155,13 @@ header.floating .search-results {
 
 .location-message {
   display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  font-size: 32px;
+  text-align: center;
 }
 .location-message.enabled {
   display: block;
